# btwin

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  mingw-w64-x86_64.cmake  vcpkg.json  windows-msvc-x64.cmake
.github/workflows/: build.yml
src/: btwin.cpp  btwin.h  main.c  main.cpp  watcher.cpp  watcher.h
